2009-12-01  Dan Nicolaescu  <dann@ics.uci.edu>

	Make vc-print-log buttons work.
	* log-view.el (log-view-mode-map):  Inherit from from widget-keymap.

2009-11-30  Ryan C. Thompson  <rct@thompsonclan.org>  (tiny change)

	* savehist.el (savehist-autosave-interval): Allow setting to nil
	through customize.  (Bug#5056)

2009-11-30  Juanma Barranquero  <lekktu@gmail.com>

	Fix references to jit-lock properties.
	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
	Refer to jit-lock-defer-multiline, not jit-lock-multiline.
	(perl-font-lock-special-syntactic-constructs):
	Quote jit-lock-defer-multiline property.

2009-11-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-registered): Call vc-git-root only once.

2009-11-30  Juri Linkov  <juri@jurta.org>

	* misearch.el (multi-isearch-search-fun): Always provide a non-nil
	value `buffer' of `multi-isearch-next-buffer-current-function'.
	Use `(current-buffer)' when `buffer' is nil.
	(multi-isearch-next-buffer-from-list): Don't fallback to
	`(current-buffer)' when `buffer' is nil.  (Bug#4947)

2009-11-30  Juri Linkov  <juri@jurta.org>

	* misearch.el (multi-isearch-read-buffers): Move canonicalization
	of buffers with `get-buffer' to `multi-isearch-buffers'.
	(multi-isearch-buffers, multi-isearch-buffers-regexp):
	Canonicalize BUFFERS with `get-buffer'.  Doc fix.
	(multi-isearch-files, multi-isearch-files-regexp): Canonicalize
	FILES with `expand-file-name' converting relative file names
	to absolute.  Doc fix.  (Bug#4727)

2009-11-30  Juri Linkov  <juri@jurta.org>

	* misearch.el (multi-isearch-read-buffers)
	(multi-isearch-read-matching-buffers): New functions.
	(multi-isearch-buffers, multi-isearch-buffers-regexp):
	Use them in the `interactive' spec.  Doc fix.
	(multi-isearch-read-files, multi-isearch-read-matching-files):
	New functions.
	(multi-isearch-files, multi-isearch-files-regexp):
	Use them in the `interactive' spec.  Doc fix.  (Bug#4725)

2009-11-30  Juri Linkov  <juri@jurta.org>
